--- a/applications/welcome/views/default/user.html
+++ b/applications/welcome/views/default/user.html
@@ -1,17 +1,5 @@
 {{extend 'layout.html'}}
 
-<!--display page header-->
-{{block header}}
-    <header class="container-fluid background">
-      <div class="jumbotron text-center">
-        {{if response.title:}}
-        <h1>{{=response.title}}
-          <small>{{=response.subtitle or ''}}</small></h1>
-        {{pass}}
-      </div>
-    </header>
-{{end}}
-
 <h2>
 {{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
 </h2>
@@ -35,13 +23,13 @@
 </div>
 
 
-<!--{{block page_js}}-->
-<!--<script>-->
-    <!--jQuery("#web2py_user_form input:visible:enabled:first").focus();-->
-<!--{{if request.args(0)=='register':}}-->
-    <!--web2py_validate_entropy(jQuery('#auth_user_password'),100);-->
-<!--{{elif request.args(0)=='change_password':}}-->
-    <!--web2py_validate_entropy(jQuery('#no_table_new_password'),100);-->
-<!--{{pass}}-->
-<!--</script>-->
-<!--{{end page_js}}-->
+{{block page_js}}
+<script>
+    jQuery("#web2py_user_form input:visible:enabled:first").focus();
+{{if request.args(0)=='register':}}
+    web2py_validate_entropy(jQuery('#auth_user_password'),100);
+{{elif request.args(0)=='change_password':}}
+    web2py_validate_entropy(jQuery('#no_table_new_password'),100);
+{{pass}}
+</script>
+{{end page_js}}
