--- a/applications/welcome/views/layout.html
+++ b/applications/welcome/views/layout.html
@@ -23,8 +23,6 @@
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap-theme.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
-    <link rel="stylesheet" href="{{=URL('static','css/myapp.css')}}"/>
-    <link rel="stylesheet" href="{{=URL('static', 'font-awesome-4.4.0/css/font-awesome.min.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
     <!-- All JavaScript at the bottom, except for Modernizr which enables
@@ -72,7 +70,7 @@
         </div>
       </div>
     </nav>
-    <!-- Masthead ===================================== -->
+    <!-- Masthead ===================================== -->    
     {{block header}}
     {{end}}
     <!-- Main ========================================= -->
@@ -96,7 +94,7 @@
       {{if right_sidebar_enabled:}}
         <div class="col-md-3">
             {{block right_sidebar}}
-            <!--<h3>Right Sidebar</h3>-->
+            <h3>Right Sidebar</h3>
             <p></p>
             {{end}}
         </div>
@@ -104,7 +102,7 @@
 
     </div>
 
-    {{block footer}} <!-- this is default footer -->
+    {{block footer}} <!-- this is default footer -->      
     <footer class="footer">
       <div class="container-fluid">
         <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
@@ -118,7 +116,6 @@
     <!-- The javascript =============================== -->
     <script src="{{=URL('static','js/bootstrap.min.js')}}"></script>
     <script src="{{=URL('static','js/web2py-bootstrap3.js')}}"></script>
-    <script src="{{=URL('static', 'js/ractive.min.js')}}"></script>
     {{block page_js}}{{end page_js}}
     {{if response.google_analytics_id:}}
     <!-- Analytics ==================================== -->
