--- a/applications/modeling/views/default/modeling.html
+++ b/applications/modeling/views/default/modeling.html
@@ -2,10 +2,13 @@
 {{extend 'layout.html'}}
 
 <script type="text/javascript" src="http://www.cs.unm.edu/~angel/WebGL/7E/Common/webgl-utils.js"></script>
-<script type="text/javascript" src="modelingScripts/linLib.js"></script>
-<script type="text/javascript" src="modelingScripts/gfxSupport.js"></script>
-<script type="text/javascript" src="modelingScripts/main.js"></script>
+<script type="text/javascript" src="http://www.cs.unm.edu/~angel/WebGL/7E/Common/MV.js"></script>
+<script type="text/javascript" src="{{=URL('static', 'js/modelingScripts/shark.coor.js')}}"></script>
+<script type="text/javascript" src="{{=URL('static', 'js/modelingScripts/shark.poly.js')}}"></script>
+<script type="text/javascript" src="{{=URL('static', 'js/modelingScripts/linlib.js')}}"></script>
+<script type="text/javascript" src="{{=URL('static', 'js/modelingScripts/main.js')}}"></script>
 
+<!--display header-->
 {{block header}}
     <header class="container-fluid background">
       <div class="jumbotron text-center">
@@ -17,10 +20,79 @@
     </header>
 {{end}}
 
-</body>
+<form>
+<fieldset>
+<legend>Color: </legend> <br>
+<button type="button" onclick="setPickColor()">Set Color</button>
+Red :
+<input id="red" type="range" value="0" min="0" max = 1 step="0.001"/>
+Green :
+<input id="green" type="range" value="0" min="0" max = 1 step="0.001"/>
+Blue :
+<input id="blue" type="range" value="0" min="0" max = 1 step="0.001"/>
+</fieldset>
+</form> <br>
 
+<h1>WebMod : Ryan Connors, Joseph Bernay</h1>
+<body>
 <canvas id="gl-canvas" width="800" height="800">>
-Oops ... your browser doesn't support the HTML5 canvas element
-</canvas><br>
+    Oops ... your browser doesn't support the HTML5 canvas element
+</canvas>
 
-</body>
+
+<form>
+<fieldset>
+<legend>Primitive Mesh Creation:</legend>
+ <br>
+<button type="button" onclick="cubePrim()">Cube</button>
+<button type="button" onclick="pyramidPrim()">Pyramid</button>
+<button type="button" onclick="spherePrim()">Sphere</button>
+<button type="button" onclick="cylinderPrim()">Cylinder</button>
+<button type="button" onclick="conePrim()">Cone</button>
+<button type="button" onclick="toroidPrim()">Toroid</button></fieldset>
+</form>
+<form>
+<fieldset>
+<legend>Mesh Edit</legend>
+<button type="button" onclick="deleteMesh()">Delete Mesh</button>
+<button type="button" onclick="merge()">Merge</button>
+<button type="button" id="polyButton" onclick="togglePolyMode()">Poly Mode : ON</button>
+<button type="button" onclick="deletePoly()">Delete Polygon</button>
+<button type="button" onclick="extrudePoly()">Extrude Polygon</button>
+</fieldset>
+<br>
+</form>
+<form>
+<fieldset>
+<legend>Shading</legend>
+<button type="button" onclick="toSmthShad()">Smooth</button>
+<button type="button" onclick="toFlatShad()">Flat</button>
+</fieldset>
+</form>
+
+Delete - Delete Selected Mesh <br>
+B - Add Shark Primitive <br>
+N - Add Cube Primitive <br>
+M - Add Pyramid Primitive <br>
+
+Q - Rotate on X <br>
+W - Rotate on Y <br>
+E - Rotate on Z <br>
+R - Rotate whever your move your mouse<br>
+Z - Translate along Z <br>
+click and drag to translate <br>
+<form>
+<legend> Input/Output </legend>
+<fieldset>
+Model Coordinate File : <br>
+<textarea id="coord" rows="4" cols="50">
+</textarea> <br>
+Model Polygon File : <br>
+<textarea id="poly" rows="4" cols="50">
+</textarea>
+<button type="button" onclick="genModFile()">Generate</button>
+<button type="button" onclick="importModel()">Import</button><br>
+</fieldset>
+</form>
+
+</body><br><br>
