--- a/applications/modeling/views/default/index.html
+++ b/applications/modeling/views/default/index.html
@@ -1,4 +1,3 @@
-{{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
 <!--display header-->
@@ -12,3 +11,108 @@
       </div>
     </header>
 {{end}}
+
+<html>
+    <head>
+        <style>
+            #body {
+                background-color:#111;
+                height:100vh;
+                width:100vw;
+            }
+            #left {
+                float:left;
+                width:79.5%;
+                margin:5px;
+            }
+            #right {
+                line-height:30px;
+                background:linear-gradient(#212229, black);
+                width:19.5%;
+                float:right;
+                height:100vh;
+                border-radius:5%;
+            }
+            #welcome {
+                height:80vh;
+            }
+            #favorites {
+                background:linear-gradient(#212229, black);
+                color:white;
+                clear:both;
+                text-align:center;
+                height:20vh;
+            }
+            #title {
+                color:#d98200;
+            }
+            #btn_signup {
+                float:left;
+                text-align:center;
+                background: linear-gradient(#d98200, #663d00);
+                border-radius:10%;
+                color:white;
+                margin:10px;
+                padding:10px;
+                width:20%;
+            }
+            #btn_login {
+                float:right;
+                text-align:center;
+                background: linear-gradient(#d98200, #663d00);
+                border-radius:10%;
+                color:white;
+                margin:10px;
+                padding:10px;
+                width:20%;
+            }
+            #btn_model {
+                position:relative;
+                left:10%;
+                text-align:center;
+                line-height:300%;
+                background: linear-gradient(#d98200, #663d00);
+                border-radius:25px;
+                color:white;
+                margin:10px;
+                padding:10px;
+                width:80%;
+                height:15%;
+                font-size:40px;
+
+            }
+            #text {
+                color:white;
+            }
+        </style>
+    </head>
+    <body id="body">
+        <div id="left">
+            <div id="welcome">
+                <h2 id="title">Welcome</h2>
+                <p id="text">
+                    Things
+                </p>
+                <p id="text">
+                    Stuff
+                </p>
+            </div>
+            <div id="favorites">
+                Scrolly Area
+            </div>
+        </div>
+
+        <div id="right">
+            <div id="btn_signup">Sign Up</div>
+            <div id="btn_login">Sign In</div><br><br>
+            <div id="btn_model" onclick="$:location.href='modeling'">Model</div>
+        </div>
+    </body>
+
+    <script>
+        function gotoModel(){
+
+        }
+
+    </script>
+</html>
