User Profile Changes
Allows users to change their profile data; also added in usernames.
Prevented users from accessing blank profile page (page with no user)

--- a/applications/WebMod/static/css/myapp.css
+++ b/applications/WebMod/static/css/myapp.css
@@ -47,6 +47,7 @@ h3 {
 .orange_btn:hover {
    color: black;
    background: linear-gradient(#d98200, #ffe0b3);
+   text-decoration: none;
 }
 
 .btn-primary {
@@ -63,4 +64,5 @@ h3 {
 .btn-primary:hover {
    color: black;
    background: linear-gradient(#d98200, #ffe0b3);
+   text-decoration: none;
 }
