--- a/applications/WebMod/views/default/index.html
+++ b/applications/WebMod/views/default/index.html
@@ -53,24 +53,6 @@
             #title {
                 color:#d98200;
             }
-            #btn_signup {
-                float:left;
-                text-align:center;
-                background: linear-gradient(#d98200, #663d00);
-                border-radius:10%;
-                color:white;
-                margin:10px;
-                padding:10px;
-            }
-            #btn_login {
-                float:right;
-                text-align:center;
-                background: linear-gradient(#d98200, #663d00);
-                border-radius:10%;
-                color:white;
-                margin:10px;
-                padding:10px;
-            }
             #btn_model {
                 text-align:center;
                 line-height:300%;
@@ -81,7 +63,6 @@
                 padding:10px;
                 height:15%;
                 font-size:40px;
-
             }
             #text {
                 color:white;
@@ -106,11 +87,11 @@
 
         <div id="right">
             {{if not auth.user_id:}}
-            <div id="btn_signup" onclick="$:location.href='user/register'" onmouseover="color1(this)" onmouseout="color2(this)">Sign Up</div>
-            <div id="btn_login" onclick="$:location.href='user/login'" onmouseover="color1(this)" onmouseout="color2(this)">Sign In</div><br><br>
+                <div class="orange_btn" style="float:left" onclick="$:location.href='user/register'" onmouseover="color1(this)" onmouseout="color2(this)">Sign Up</div>
+                <div class="orange_btn" style="float:right" onclick="$:location.href='user/login'" onmouseover="color1(this)" onmouseout="color2(this)">Sign In</div><br><br>
             {{else:}}
-            <div id="btn_model" onclick="$:location.href='profile'" onmouseover="color1(this)" onmouseout="color2(this)">Profile</div>
-            <div id="btn_model" onclick="$:location.href='user/logout'" onmouseover="color1(this)" onmouseout="color2(this)">Logout</div>
+                <div class="orange_btn" style="float:left" onclick="$:location.href='profile'" onmouseover="color1(this)" onmouseout="color2(this)">Profile</div>
+                <div class="orange_btn" style="float:right" onclick="$:location.href='user/logout'" onmouseover="color1(this)" onmouseout="color2(this)">Logout</div><br><br>
             {{pass}}
             <div id="btn_model" onclick="$:location.href='modeling'" onmouseover="color1(this)" onmouseout="color2(this)">Model</div>
         </div>
